# ulauncher-toggl-extension

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  LICENSE.md  README.md  main.py  manifest.json  pyproject.toml  requirements.txt  versions.json
.github/workflows/: merge.yaml  tests.yaml
docs/: CONTRIBUTING.md  DEVELOPMENT.md  guide.md
tests/: conftest.py  test_datetime.py  test_query.py  test_utils.py
tests/data/: detailed_response.json
tests/test_commands/: conftest.py  test_client.py  test_help.py  test_meta.py  test_project.py  test_reports.py  test_tags.py  test_tracker.py
ulauncher_toggl_extension/: __init__.py  date_time.py  extension.py  images.py  preferences.py  query.py  util.py  utils.py
ulauncher_toggl_extension/commands/: __init__.py  client.py  help.py  meta.py  project.py  report.py  tag.py  tracker.py
ulauncher_toggl_extension/toggl/: __init__.py  dataclasses.py  images.py  serializers.py  toggl_cli.py  toggl_manager.py
ulauncher_toggl_extension/toggl/cli/: __init__.py  meta.py  project.py  tracker.py
ulauncher_toggl_extension/toggl/manager/: __init__.py  manager.py  viewer.py
