[tool.poetry]
name = "ulauncher-toggl-extension"
version = "0.0.1"
description = "Toggl time tracker extension for Ulauncher."
authors = ["David Kasakaitis <davidkasakaitis@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pygobject-stubs = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = []

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["attr-defined", "assignment"]
