[tool.poetry]
name = "ulauncher-toggl-extension"
version = "2.0.1"
description = "Toggl time tracker extension for Ulauncher."
authors = ["David Kasakaitis <davidkasakaitis@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toggl-api-wrapper = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pygobject-stubs = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
preview = true
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "ARG",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "NPY",
  "AIR",
  "PERF",
  "FURB",
  "LOG",
  "RUF",
]
ignore = [
  "S101",
  "RUF012",
  "SIM102",
  "UP007",
  "PLW2901",
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["attr-defined", "assignment"]
